# git-blame-rank

./: .gitignore  Cargo.toml  flake.nix
docs/: planning.md
src/: app.rs  cli.rs  core.rs  event.rs  git.rs  lib.rs  main.rs  tui.rs  tui_state.rs
