[package]
name = "git-blame-rank"
version = "0.1.0"
edition = "2024"
description = "CLI for ranking git blame ownership in a repository"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
bstr = "1.12.0"
clap = { version = "4.5.39", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
git2 = { version = "0.20.2", default-features = false }
ratatui = "0.29.0"
smol_str = "0.3.2"
thiserror = "2.0.12"
